--- a/views/layout.pug
+++ b/views/layout.pug
@@ -41,5 +41,5 @@ html
     hr
     .footer
       p.team MJU LUNAS
-      p 김민수, 김수아, 김현목, 배수혜, 이준석, 이예은, 정찬영, 최리안, 최민지
+      p 김민수, 김수아, 배수혜, 이준석, 이예은, 정찬영, 최리안, 최민지
 
