--- a/views/index.pug
+++ b/views/index.pug
@@ -5,9 +5,8 @@ block content
     .container
       .row
         .col
-          img#mju_logo2(src='/images/mju_logo2.jpg', alt='')
+          img#mju_logo2(src='./public/images/logo.png', alt='명지대학교')
         .col.buttons
-          a.btn.btn-primary.btn-lg.btn-block.btn1(href='#') 조회하기
           a.btn.btn-primary.btn-lg.btn-block.btn2(href='/reservation') 예약하기
           a.btn.btn-primary.btn-lg.btn-block.btn3(href='#') 예약확인
           a.btn.btn-primary.btn-lg.btn-block.btn4(href='/singout') 로그아웃
